--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/zer0-os/zXP#readme",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.3.2",
     "hardhat": "^2.6.2",
     "hardhat-ethers": "^1.0.1",
     "hardhat-waffle": "0.0.1-security"
