--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
+    "@metamask/eth-sig-util": "^5.1.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
     "chai": "^4.3.6",
+    "crypto": "^1.0.1",
+    "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.1",
     "hardhat": "^2.11.2"
   },
-  "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.4"
-  }
+  "devDependencies": {}
 }
