--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
+    "axios": "^1.4.0",
     "chai": "^4.3.6",
     "crypto": "^1.0.1",
     "ethereum-waffle": "^4.0.10",
